# pynq-hal-generator

./: README.md  pyproject.toml
pynq_hal_generator/: __init__.py  cli.py  generator.py  models.py  parser.py
pynq_hal_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pynq_hal_generator/templates/: hal.py.j2  test_template.ipynb.j2
tests/: test_cli.py  test_generator.py  test_parser.py
tests/fixtures/: axi_config.json
